package socket.request;

public interface IRequest {
    void handleRequest(EncodedRequest request);
}
